--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Вход</title>
+    <title>Авторизация</title>
 </head>
 <body>
-    <h1>Вход</h1>
+    <h1>Авторизация</h1>
     <form method="POST">
-        <label>Логин: <input type="text" name="login" required></label><br>
-        <label>Пароль: <input type="password" name="password" required></label><br>
+        <label>Логин: <input type="text" name="login"></label><br>
+        <label>Пароль: <input type="password" name="password"></label><br>
         <button type="submit">Войти</button>
     </form>
-    <a href="{{ url_for('register') }}">Нет аккаунта? Зарегистрироваться</a>
 </body>
 </html>
